# GoBoard

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  GoBoardControllerVersion.cmake  JUCEDefaults.cmake
refer/: CODEX.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/core/: BoardState.cpp  BoardState.h  ControlVector.h  FeatureExtractor.cpp  FeatureExtractor.h  GoRuleEngine.cpp  GoRuleEngine.h  MappingEngine.cpp  MappingEngine.h
source/gui/: BoardComponent.cpp  BoardComponent.h
tests/: BoardStateTests.cpp  FeatureExtractorTests.cpp  GoRuleEngineTests.cpp  MappingEngineTests.cpp  TestMain.cpp
